--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="description" content="The Sporting Ledger — strategy, recruitment and the business of winning.">
   <meta property="og:title" content="The Sporting Ledger — Sports, Analysed">
   <meta property="og:description" content="Strategy, recruitment and the business of winning.">
-  <meta property="og:image" content="assets/og.png">
+  <meta property="og:image" content="https://www.thesportingledger.co.uk/assets/og.png">
   <link rel="icon" href="/favicon.ico">
+  <link rel="canonical" href="https://www.thesportingledger.co.uk/">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
